# Geometric-Graph-Grammar-ToolChain

./: .gitattributes  .gitignore  CONTRIBUTORS.md  LICENSE  README.md
docs/: ALGORITHM_NOTES.md
docs/ideas/: 2-complex-induction.md  README.md  higher-dimensional-grammar.md
fixtures/: README.md
fixtures/expected/: demo_triangle.ggg.json  two_triangles.ggg.json
fixtures/graphs/: grid_3x3.json  two_triangles.json
src/g3-2d/: README.md
src/g3-2d/cpp/: README.md
src/g3-2d/python/: README.md  pyproject.toml
src/g3-2d/python/g3_2d/: __init__.py  __main__.py  analysis.py  detection.py  eeg.py  encoder.py  examples.py  expansion.py  forward.py  generators.py  geometry.py  grammar.py  graph.py  io.py  isogroup.py  isomorphism.py  learn.py  osm.py  parse.py  selection.py  viz.py
src/g3-2d/python/tests/: test_eeg.py  test_forward.py  test_geometry.py  test_grammar.py  test_graph.py  test_io.py  test_isomorphism.py  test_osm.py  test_parse.py  test_pipeline.py
src/g3-3d/: README.md
src/g3-3d/cpp/: README.md
src/g3-3d/python/: README.md
