[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g3-2d"
version = "0.0.1"
description = "Geometric Graph Grammars in 2D - learning and generation (reference Python implementation)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Serendip Commons Society" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
viz = ["matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["g3_2d"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
